--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.min.js"></script>
-    <script>$('.carousel.carousel-slider').carousel({fullWidth: true});</script>
+    <script>
+    $(document).ready(function() {
+      $('.carousel.carousel-slider').carousel({fullWidth: true});
+      $(".button-collapse").sideNav();
+      $('.collapsible').collapsible();
+
+    });
+  </script>
   </body>
 </html>
